# pyt-cisco

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: cisco-netacad-integration.md  claude-code-setup.md  installation.md  kursablauf.md
modul-1-introduction/: README.md
modul-1-introduction/04-materialien/: vscode-shortcuts.md
modul-2-datentypen/: README.md
modul-2-datentypen/01-praxis/: README.md
modul-2-datentypen/04-materialien/: README.md
modul-2-datentypen/05-beispiele/: README.md
modul-3-kontrollstrukturen/: README.md
modul-3-kontrollstrukturen/00-vorbereitung/: README.md  erste-experimente.md  leseauftrag.md  quiz.md
modul-3-kontrollstrukturen/01-praxis/: README.md  lektion-1-boolean-conditionals.md  lektion-2-loops.md  lektion-3-lists.md  lektion-4-logic-sorting.md
modul-3-kontrollstrukturen/03-nachbearbeitung/: README.md  aufgabe-4-pascal-dreieck.md
modul-3-kontrollstrukturen/04-materialien/: README.md
modul-3-kontrollstrukturen/05-beispiele/: README.md  pascal_dreieck.py
modul-4-funktionen-datenstrukturen/: README.md
modul-4-funktionen-datenstrukturen/00-vorbereitung/: README.md
modul-4-funktionen-datenstrukturen/01-praxis/: README.md  lektion-1-funktionen.md  lektion-2-return-scopes.md  lektion-3-datenstrukturen-exceptions.md
modul-4-funktionen-datenstrukturen/02-uebungen/: README.md  uebung-1-funktionen-basis.md  uebung-2-parameter.md  uebung-3-schaltjahr.md  uebung-4-primzahl.md  uebung-5-dictionary.md  uebung-6-exceptions.md  (+2 more)
scripts/: check_code.sh  format_code.sh  run_tests.sh
(+26 files in other folders)
